# VideoDownloader

./: .gitignore  README.md  VideoDownloader.spec  apply_i18n.py  apply_i18n_logs.py  audio_formats.txt  build_exe.py  config.example.yaml  deeplearning_ai_downloader.code-workspace  install.bat  main.py  pyproject.toml  rebuild_i18n.py  requirements.txt  test.py  test_logger.py  test_undo.py  test_yt.py  test_yt_n_sig.py  translate.py
core/: cookies.py  downloader.py  utils.py
docs/: architecture.md  config.md  development.md  i18n.md  plugins.md
plugins/: base.py  coursera.py  deeplearning_ai.py  generic_ytdlp.py  harvard.py  kodekloud.py  skills_google.py
videodownloader/: __init__.py  main.py
videodownloader/core/: cookies.py  downloader.py  utils.py
videodownloader/gui/: __init__.py  app.py
videodownloader/plugins/: base.py  coursera.py  deeplearning_ai.py  generic_ytdlp.py  harvard.py  kodekloud.py  skills_google.py
